--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,10 @@
-@import "./test.scss";
 @import "./reset.scss";
+@import "./header";
+@import "./hero";
+@import "./root";
+@import "./go";
+@import "./modal";
+@import "./image__block";
+@import "./btns";
+@import "./destinations";
+@import "./ocean";
