--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,534 @@
+@import url("https://fonts.googleapis.com/css2?family=Bruno+Ace&display=swap");
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+html,
+body,
+div,
+span,
+object,
+iframe,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+code,
+em,
+img,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+b,
+u,
+i,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+main,
+canvas,
+embed,
+footer,
+header,
+nav,
+section,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: none;
+     -moz-text-size-adjust: none;
+      -ms-text-size-adjust: none;
+          text-size-adjust: none;
+}
+
+footer,
+header,
+nav,
+section,
+main {
+  display: block;
+}
+
 body {
-  background-color: red;
+  overflow-x: hidden;
+  padding-top: 8vh;
+  line-height: 1;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+input {
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
+section {
+  width: 100%;
+}
+
+header {
+  background-image: -webkit-gradient(linear, left top, right top, from(var(--my_green)), color-stop(rgb(219, 197, 197)), to(var(--my_pink)));
+  background-image: linear-gradient(to right, var(--my_green), rgb(219, 197, 197), var(--my_pink));
+  position: fixed;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 8vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.hero {
+  height: 90vh;
+  background-image: url(../img/Mount.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+  overflow: hidden;
+}
+
+.balloon {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 100px;
+  right: 0;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.hero_box h1 {
+  font-size: 20px;
+  text-align: center;
+  opacity: 0;
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+.hero_box p {
+  margin: 10px;
+  opacity: 0;
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+  -webkit-transition-delay: 1s;
+          transition-delay: 1s;
+}
+
+.hero_box {
+  width: 250px;
+  height: 240px;
+  padding: 15px;
+  border-radius: 20px;
+  background-color: rgba(0, 0, 0, 0.54);
+  border: 1px solid black;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  color: var(--my_green);
+  -webkit-transform: translateX(-350px);
+          transform: translateX(-350px);
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+}
+
+:root {
+  --my_green: rgb(150, 219, 201);
+  --my_pink: rgb(255, 192, 203);
+  --turns-slow: all 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+body {
+  font-family: "Castoro Titling", cursive;
+  background-color: var(--my_green);
+}
+
+h2 {
+  font-size: 30px;
+}
+
+.go {
+  height: 300px;
+  margin: 0 auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 40px 0;
+}
+@media screen and (max-width: 500px) {
+  .go {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    height: 1000px;
+  }
+}
+
+.go p {
+  color: var(--my_green);
+  font-size: 12px;
+  text-align: center;
+}
+
+.go li {
+  width: 110px;
+  height: 200px;
+  border-radius: 20px;
+  background-color: white;
+  padding: 10px;
+  margin: 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media screen and (max-width: 500px) {
+  .go li {
+    width: 150px;
+  }
+}
+
+.circle {
+  width: 60px;
+  height: 60px;
+  background-color: var(--my_green);
+  border-radius: 50%;
+  margin: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.go svg {
+  width: 50px;
+  height: 50px;
+  fill: white;
+}
+
+.hole {
+  width: 15px;
+  height: 15px;
+  background-color: var(--my_green);
+  display: block;
+  margin: 0 auto;
+  border-radius: 50%;
+}
+
+.learn__more__modal {
+  visibility: visible;
+  pointer-events: initial;
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.812);
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.x {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  width: 50px;
+  height: 40px;
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+}
+
+.svg__x {
+  width: 40px;
+  height: 40px;
+  stroke: black;
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+}
+
+.x:hover .svg__x {
+  scale: 1.5;
+  stroke: var(--my_green);
+}
+
+.modal__box {
+  width: 300px;
+  height: 450px;
+  background-color: white;
+  border-radius: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  padding: 50px;
+}
+
+.project_experience {
+  background-color: black;
+  padding: 10%;
+}
+
+.project_experience h2,
+.project_experience p {
+  color: white;
+  text-align: center;
+  margin: 30px 0;
+}
+
+.image__block {
+  height: 800px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media screen and (min-width: 767px) {
+  .image__block {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    height: 500px;
+  }
+}
+
+.image__block > img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+
+.learn__more__btn {
+  padding: 10px;
+  display: block;
+  margin: auto;
+  border: 2px solid rgb(133, 223, 211);
+  color: rgb(133, 223, 211);
+  border-radius: 20px;
+  background-color: transparent;
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+}
+
+.learn__more__btn:hover {
+  background-color: rgb(133, 223, 211);
+  color: black;
+}
+
+.more {
+  background-color: transparent;
+  border: 3px solid var(--my_pink);
+  border-radius: 20px;
+  width: 70px;
+  height: 30px;
+  color: var(--my_pink);
+  font-size: 17px;
+  margin-top: 10px;
+  -webkit-transition: var(--turns-slow);
+  transition: var(--turns-slow);
+}
+
+.more:hover {
+  width: 120px;
+  background-color: var(--my_pink);
+  color: white;
+}
+
+.destinations {
+  background-color: var(--my_pink);
+  text-align: center;
+}
+
+.destinations,
+.destinations > p {
+  padding: 30px;
+}
+
+.destinations__cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+@media screen and (max-width: 767px) {
+  .destinations__cards {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.destinations__cards li {
+  width: 250px;
+  height: 450px;
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+  margin: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+}
+
+.destinations__cards h3 {
+  margin: 15px 0;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.destinations__cards img {
+  display: block;
+  margin: auto;
+  width: 200px;
+  height: 200px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 20px;
+  margin: 0;
+}
+
+.ocean {
+  height: 500px;
+  background-image: url(../img/boat.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: bottom;
+  color: white;
+  position: relative;
+}
+
+.ocean h2 {
+  border: 1px solid red;
+  position: absolute;
+  width: 60%;
+  bottom: 0;
+  height: 30%;
+  text-align: right;
+}
+
+.ocean p {
+  border: 1px solid rgb(47, 0, 255);
+  padding: 0 2%;
+  position: absolute;
+  width: 40%;
+  height: 30%;
+  bottom: 0;
+  right: 0;
 }/*# sourceMappingURL=main.css.map */
