--- a/css/main.css
+++ b/css/main.css
@@ -201,10 +201,17 @@ header {
 body {
   font-family: "Castoro Titling", cursive;
   background-color: var(--my_green);
+  overflow-x: hidden;
+}
+
+section {
+  width: 100vw;
 }
 
 h2 {
   font-size: 30px;
+  text-align: center;
+  margin: 15px 0;
 }
 
 .go {
@@ -356,10 +363,14 @@ h2 {
 
 .project_experience {
   background-color: black;
-  padding: 10%;
+  padding: 5% 10%;
 }
 
-.project_experience h2,
+.project_experience h2 {
+  color: white;
+  margin-bottom: 40px;
+}
+
 .project_experience p {
   color: white;
   text-align: center;
@@ -531,4 +542,187 @@ h2 {
   height: 30%;
   bottom: 0;
   right: 0;
+}
+
+.best {
+  background-color: black;
+  padding: 20px;
+  text-align: center;
+}
+
+.best h2 {
+  color: white;
+}
+
+.best p {
+  margin: 20px 0;
+  color: var(--my_green);
+}
+
+.best__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0 10%;
+}
+
+.best__box li {
+  width: 150px;
+  height: 150px;
+  background-color: var(--my_green);
+  border-radius: 20px;
+  padding: 10px;
+  margin: 20px;
+}
+
+.best__box p {
+  color: black;
+}
+
+.best__box p:first-child {
+  font-size: 40px;
+  color: white;
+  margin-bottom: 10px;
+}
+
+.mountains {
+  background-color: white;
+  padding: 20px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+@media screen and (max-width: 767px) {
+  .mountains {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.mon__img__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+@media screen and (max-width: 767px) {
+  .mon__img__box {
+    margin-bottom: 15px;
+  }
+}
+
+.mon__img__box li {
+  height: 350px;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mon__img__box li:nth-child(1) {
+  background-color: aqua;
+  background-image: url(../img/mo1.jpg);
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.mon__img__box li:nth-child(2) {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  background-color: royalblue;
+  background-image: url(../img/mo2.png);
+}
+
+.moun__box {
+  background-color: rgba(0, 0, 0, 0.468);
+  color: white;
+  width: 100%;
+  height: 175px;
+  padding: 10px;
+}
+
+.moun__box p {
+  margin: 15px 5px;
+}
+
+.moun__box p:nth-child(1) {
+  font-size: 15px;
+  color: aqua;
+}
+
+.moun__box p:nth-child(2) {
+  font-size: 12px;
+}
+
+.mountains > div {
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  padding: 10px 15px;
+  margin: 0;
+}
+
+.mountains > div p:nth-child(1) {
+  font-weight: bold;
+}
+
+.mountains > div,
+.mon__img__box {
+  width: 350px;
+  height: 350px;
+}
+
+.about__agency > div {
+  width: 300px;
+  height: 300px;
+  background-image: url(../img/a.jpg);
+  background-position: center;
+  background-size: cover;
+  border-radius: 20px;
+  margin: 30px auto;
+  display: block;
+  position: relative;
+  text-align: center;
+}
+
+.a__overlay {
+  padding: 10px;
+  width: 90%;
+  height: 90%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.403);
+  -webkit-backdrop-filter: blur(1px);
+          backdrop-filter: blur(1px);
+  border-radius: 20px;
 }/*# sourceMappingURL=main.css.map */
