--- a/sass/_image__block.scss
+++ b/sass/_image__block.scss
@@ -1,14 +1,17 @@
 .project_experience {
   background-color: black;
-
-  padding: 10%;
+  padding: 5% 10%;
 }
-.project_experience h2,
+.project_experience h2 {
+  color: white;
+  margin-bottom: 40px;
+}
 .project_experience p {
   color: white;
   text-align: center;
   margin: 30px 0;
 }
+
 .image__block {
   height: 800px;
 
