--- a/sass/_about.scss
+++ b/sass/_about.scss
@@ -1,3 +1,7 @@
+.about__agency {
+  background-color: var(--my_pink);
+  padding: 10px 0;
+}
 .about__agency > div {
   width: 300px;
   height: 300px;
