--- a/sass/_go.scss
+++ b/sass/_go.scss
@@ -25,7 +25,7 @@
   margin: 0 30px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   @media screen and (max-width: 500px) {
     width: 150px;
   }
@@ -35,7 +35,7 @@
   height: 60px;
   background-color: var(--my_green);
   border-radius: 50%;
-  margin: auto;
+  margin: 15px auto;
   display: flex;
   align-items: center;
   justify-content: center;
