--- a/sass/_modal.scss
+++ b/sass/_modal.scss
@@ -1,4 +1,4 @@
-.learn__more__modal {
+.backdrop {
   visibility: visible;
   pointer-events: initial;
   position: fixed;
@@ -27,6 +27,7 @@
   border: none;
 }
 .svg__x {
+  pointer-events: none;
   width: 40px;
   height: 40px;
   stroke: black;
@@ -35,6 +36,8 @@
 .x:hover .svg__x {
   scale: (1.5);
   stroke: var(--my_green);
+  background-color: white;
+  border-radius: 20px;
 }
 .modal__box {
   width: 300px;
@@ -46,4 +49,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 50px;
+  background-size: cover;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
