--- a/sass/_ocean.scss
+++ b/sass/_ocean.scss
@@ -4,27 +4,14 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: bottom;
-  color: white;
-  position: relative;
+  display: flex;
+  align-items: flex-end;
 }
-.ocean h2 {
-  border: 1px solid red;
-  position: absolute;
-  width: 60%;
-  bottom: 0;
-  height: 30%;
-  text-align: right;
-
-  //   transform: translateX(0);
-}
+.ocean h2,
 .ocean p {
-  border: 1px solid rgb(47, 0, 255);
-  padding: 0 2%;
-  position: absolute;
-  width: 40%;
-  height: 30%;
-  bottom: 0;
-
-  right: 0;
-  //   transform: translateX(100%);
+  color: white;
+  width: 50%;
+  border: 1px solid red;
+  height: 40%;
+  margin: 0;
 }
